apps/hoarder/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluesky
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  rules:
    - host: hoarder.int.kyledev.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hoarder
                port:
                  number: 3000
  tls:
    - hosts:
        - hoarder.int.kyledev.co
      secretName: hoarder-kyledev-tls-prod
